Fixed current game bg color and gif(t) icon visibility

--- a/import.css
+++ b/import.css
@@ -191,7 +191,7 @@
     visibility: hidden;
 }
 
-.activityPanel-28dQGo { 
+.panel-24C3ux { 
     border-bottom: none;
     border-top: 1px solid #121213;
 }
@@ -205,7 +205,7 @@
     color: white;
 }
 
-.activityPanel-28dQGo {
+.panel-24C3ux {
     background-color: #19191b;
 }
 
@@ -494,7 +494,7 @@
     opacity: 0.7;
 }
 
-[tabindex="3"] {
+[tabindex="2"] {
     visibility: hidden;
 }
 
